@@ -1,5 +1,15 @@
 2004-05-22  Benjamin Kosnik  <bkoz@redhat.com>
 
+	* testsuite/testsuite_hooks.h (func_callback): Declare copy
+	constructor and assignment operator private.	
+	* testsuite/23_containers/deque/cons/clear_allocator.cc: Match
+	exception specifications of base class.
+	* testsuite/23_containers/list/cons/clear_allocator.cc: Same.
+	* testsuite/23_containers/vector/cons/clear_allocator.cc: Same.
+	* testsuite/23_containers/vector/bool/clear_allocator.cc: New.
+		
+2004-05-22  Benjamin Kosnik  <bkoz@redhat.com>
+
 	* libsupc++/cxxabi.h: Remove duplicated and useless public and
         private keywords in class declarations. Format. Use
         stddef.h. Expose declarations to "C" compilation.
